# c-network-emulator

./: CMakeLists.txt  LICENSE  README.md  boilerplate.c  functions.c  nf-queue  nf-queue.c
src/: mersenne  mersenne.c  nf-functions.c  nf-queue  nf-queue.c  packet_log.csv  test.py
src/analysis/: plot.py  test.py
src/components/: mersenne.c  packet-manipulation.c
